hphp/hack/test/decl/typedefs.php.typecheck.exp
File "typedefs.php", line 6, characters 1-51:
No code may exist outside of namespace {} (Parsing[1002])
File "typedefs.php", line 10, characters 16-20:
You cannot have an array without generics in strict mode (Typing[4045])
